MRDS_K8S/API_Layer/api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bicicletas-service
  namespace: twcam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bicicletas-service
  template:
    metadata:
      labels:
        app: bicicletas-service
    spec:
      containers:
        - name: bicicletas
          image: rodasmarco/bicicletas-service:latest
          ports:
            - containerPort: 8084
---
#Auth Service Deployment Configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: twcam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth
          image: rodasmarco/auth-service:latest
          ports:
            - containerPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polucion-service
  namespace: twcam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polucion-service
  template:
    metadata:
      labels:
        app: polucion-service
    spec:
      containers:
        - name: polucion
          image: rodasmarco/polucion-service:latest
          ports:
            - containerPort: 8091
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ayuntamiento-service
  namespace: twcam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ayuntamiento-service
  template:
    metadata:
      labels:
        app: ayuntamiento-service
    spec:
      containers:
        - name: ayuntamiento
          image: rodasmarco/ayuntamiento-service:latest
          ports:
            - containerPort: 8090
