MRDS_K8S/API_Layer/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twcam-ingress
  namespace: twcam
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: twcam.local
      http:
        paths:
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8085

          - path: /bicicletas(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bicicletas-service
                port:
                  number: 8084

          - path: /polucion(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: polucion-service
                port:
                  number: 8091

          - path: /ayuntamiento(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ayuntamiento-service
                port:
                  number: 8090
